scss/boost_union/post.scss
/* ... */
/* Tweak the primary color navbar with light font color a little bit more. */
.navbar.navbar-dark.bg-primary {
    /* If we are showing the search form, we need to show the border again as dark border
       as otherwise the active node's bottom bar might peek through. */
    &:has(#searchform-navbar.show) {
        border-bottom: 1px solid $primary;
    }

    /* Change the background color of the custom child menu and user menu navigation items in the navbar
       to dark grey when hovered and focused (especially during keyboard navigation) */
    .nav-item.dropdown.show,
    #user-action-menu.show {
        a.dropdown-item {
            background-color: inherit;
        }
        a.dropdown-item:hover,
        a.dropdown-item:focus {
            background-color: $primary;
            color: $white;
        }
    }

    /* Change the background color of the search panel in the navbar. */
    #searchform-navbar {
        background-color: $primary;
    }

    /* Change the color of the active nav items's bottom border to white as this would be presented in the
   primary color otherwise. */
    .nav-link.active {
        border-bottom-color: $white;
    }

    /* Change the color of the language selector icon to a light grey as well.
        This has to use !important as Moodle core already uses !important for the icon colors. */
    .langmenu .icon {
        color: #c8c8c8 !important; /* stylelint-disable-line declaration-no-important */
    }
}

/* Tweak the primary color navbar with dark font color. */
.navbar.navbar-light.bg-primary {
    /* Change the color of the active nav items's bottom border to dark grey as this would be presented in the
       primary color as well otherwise. */
    .nav-link.active {
        border-bottom-color: rgba($black, .6);
    }

    /* Change the background color and colors of open custom menu parent navigation items in the navbar
   as they are built differently from single navigation items. */
    .nav-item.dropdown.show .nav-link.dropdown-toggle {
        background-color: #f8f9fa;
        color: $black;
    }

    /* Change the color of the edit switch label in the navbar to dark grey.
       This has to use !important as Moodle core wants to use the color text-primary as soon as editing is on. */
    .editmode-switch-form,
    .editmode-switch-form label {
        color: rgba($black, .6) !important; /* stylelint-disable-line declaration-no-important */
    }
    .editmode-switch-form label:hover {
        color: rgba($black, .9) !important; /* stylelint-disable-line declaration-no-important */
    }

    /* Adapt the color of the edit switch widget to fit onto the dark background. */
    .custom-control-input:checked ~ .custom-control-label::before {
        background-color: $white;
        border-color: #c8c8c8;
    }
    .custom-switch .custom-control-input:checked ~ .custom-control-label::after {
        background-color: #8f959e;
    }

    /* Change the background color of the search panel in the navbar. */
    #searchform-navbar {
        background-color: $primary;
    }

    /* Change the color of the login link in the navbar to dark grey and to darker grey when hovered. */
    .login,
    .login a {
        color: rgba($black, .6);
        &:hover {
            color: rgba($black, .9);
        }
    }

    /* Change the color of the divider to dark grey.
       This has to use !important as Moodle core already uses !important for the border-left color.*/
    .divider {
        border-left: 1px solid rgba($black, .6) !important; /* stylelint-disable-line declaration-no-important */
    }
}

/*=======================================
 * Settings: Look -> Login page
 ======================================*/

/*---------------------------------------
 * Setting: Login form position
 --------------------------------------*/

/* Move the login window to the side based on the theme settings.
   While the classes login-wrapper-left and login-wrapper-right are set here,
   the class login-wrapper-center is not set here as the login form is already centered by Moodle core. */
.login-wrapper.login-wrapper-left {
    justify-content: left;
}
.login-wrapper.login-wrapper-right {
    justify-content: right;
}

/*---------------------------------------
 * Setting: Login form transparency
 --------------------------------------*/

/* Make background of login panel slightly transparent. */
.login-container.login-container-80t {
    background-color: rgba(255, 255, 255, 0.8);
}

/*---------------------------------------
 * Setting: Login container width
 --------------------------------------*/

/* Override the fixed 500px width from Boost core with the custom width setting. */
@include media-breakpoint-up(md) {
    .login-container {
        width: $logincontainer-width !important; /* stylelint-disable-line declaration-no-important */
    }

    /* Allow login-container to expand when tabs need more space. */
    body.pagelayout-login .login-container:has(#login-layout-tabs) {
        width: auto !important; /* stylelint-disable-line declaration-no-important */
        min-width: $logincontainer-width;
        max-width: 100%;
    }
}

/*---------------------------------------
 * Setting: Login layout: Accordion
 --------------------------------------*/

/* Change the white background color to support semi-transparent login containers as well. */
.login-container.login-container-80t {
    .card {
        background-color: rgba(255, 255, 255, 0.6);
    }
    .card-header,
    .card-header .btn-link {
        background-color: transparent;
    }
}
/* ... */

